apps/vite/src/pages/tech/k8s/05-nocodb/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nocodb-ingress
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - nocodb.s.4a.software
      secretName: nocodb-cert
  rules:
    - host: nocodb.s.4a.software
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: my-nocodb
                port:
                  number: 10226
